# zr

./: Cargo.toml
.github/workflows/: audit.yml  coverage.yml  release.yaml
src/: actions.rs  cli.rs  cli_log.rs  cmd.rs  entrypoint.rs  lib.rs  main.rs
src/completion/: app.rs  dynamic_app.rs  mod.rs  model.rs
src/config/: global.rs  hash.rs  mod.rs
src/console/: asker.rs  command.rs  emoji.rs  mod.rs
src/data/: arg_case.rs  arg_cmd.rs  arg_path.rs  data_arg.rs  mod.rs
src/get_config/: mod.rs
src/git/: mod.rs
src/mocks/: cmd.rs  data.rs  mod.rs
src/template/: arg_kind.rs  kind.rs  local_arg.rs  local_args.rs  mod.rs
src/upgrade/: mod.rs  upgradable.rs
src/utils/: anyhow_err.rs  error.rs  file.rs  marshall.rs  mod.rs  user.rs  zr.rs
tests/data/home/linux/.config/zr/: zr.toml
tests/data/home/zr/507c579318de0f016a79f31ea3324936adf763146e96c27949dfceeaaadbcd8f/non-global-args-with-local/: zr.toml
tests/data/home/zr/8785284fb420dc1c45b59db0481d05dded012cee2af40b82269602dfb10406fc/cmd-by-default/: zr.toml
tests/data/home/zr/8785284fb420dc1c45b59db0481d05dded012cee2af40b82269602dfb10406fc/cmd-not-default/: zr.toml
tests/data/home/zr/8785284fb420dc1c45b59db0481d05dded012cee2af40b82269602dfb10406fc/cmd-order/: zr.toml
tests/data/home/zr/8785284fb420dc1c45b59db0481d05dded012cee2af40b82269602dfb10406fc/cmd-order-reverse/: zr.toml
tests/data/home/zr/8785284fb420dc1c45b59db0481d05dded012cee2af40b82269602dfb10406fc/cmd-std/: zr.toml
tests/data/home/zr/a875e39e74a89420d95c67576a5969e7fd4007cf296c0d267d624b4582f5ac8e/arg-variants/: arg.txt.hbs  proj.txt.hbs
tests/data/home/zr/a875e39e74a89420d95c67576a5969e7fd4007cf296c0d267d624b4582f5ac8e/args-invalid-local/: zr.toml
tests/data/home/zr/a875e39e74a89420d95c67576a5969e7fd4007cf296c0d267d624b4582f5ac8e/args-invalid-root/: zr.toml
tests/data/home/zr/da9b38c8e25da2cff0de82e13a9c7136518e40ed6fc88ffdc8a56c28a859913e/: zr.toml
(+17 files in other folders)
