[package]
name = "zr"
version = "0.0.1"
edition = "2018"
authors = ["Beltram Maldant"]
description = "Project initializr with completion"
homepage = "https://github.com/beltram/zr"
repository = "https://github.com/beltram/zr"
license = "Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

include = ["/src/*", "/Cargo.toml"]

[[bin]]
name = "zr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.38"
clap = { git = "https://github.com/clap-rs/clap.git", rev = "149410979589615946d4105f4a8b130e888bf3c7" }
clap_generate = { git = "https://github.com/clap-rs/clap.git", rev = "149410979589615946d4105f4a8b130e888bf3c7" }
cached = "0.23.0"
enum-display-derive = "0.1.0"
hex = "0.4.2"
lazy_static = "1.4.0"
colored = "2.0.0"
confy = "0.4.0"
console = "0.14.0"
derive-new = "0.5.9"
# requires directories 2.x because confy still uses it
directories = "2.0.2"
env_logger = "0.8.3"
fs_extra = "1.2.0"
inflections = "1.1.1"
itertools = "0.10.0"
serde_json = "1.0.62"
sha2 = "0.9.2"
log = "0.4.14"
shells = "0.2.0"
toml = "0.5.8"
url = "2.2.0"
field_types = "1.1.0"

[dependencies.strum]
version = "0.20"
features = ["derive"]

[dependencies.handlebars]
version = "3.5.2"
features = ["dir_source"]

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.git2]
version = "0.13.17"
default-features = false

[dev-dependencies]
tempfile = "3.2.0"
assert_cmd = "1.0.3"

[profile.release]
lto = true
codegen-units = 1